--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -20,3 +20,19 @@
   border-radius: 4px;
   cursor: pointer;
 }
+
+
+input.error {
+  border: 1px solid red;
+}
+
+.error-message {
+  color: red;
+  margin-top: 0.5rem;
+}
+
+.success-message {
+  color: green;
+  margin-top: 0.5rem;
+}
+
